<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_category_explorer"
        android:key="PREF_CATEGORY_EXPLORER"
        app:iconSpaceReserved="false" >
        <ListPreference
            android:title="@string/pref_filter_title"
            android:summary="@string/pref_filter_summary"
            android:entries="@array/FilterTypeNames"
            android:entryValues="@array/FilterTypeStringValues"
            android:defaultValue="-1"
            android:key="FILTER_MODE"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:summary="@string/pref_sort_summary"
            android:key="SORT_MODE"
            android:title="@string/pref_sort_title"
            android:entries="@array/SortModeNames"
            android:defaultValue="0"
            android:entryValues="@array/SortModeStringValues"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:entries="@array/ViewModeNames"
            android:entryValues="@array/ViewModeStringValues"
            android:defaultValue="@integer/grid_view_integer"
            android:title="@string/pref_file_explorer_title"
            android:key="EXPLORER_VIEW_TYPE"
            android:summary="@string/pref_viewmode_summary"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:title="@string/display_language"
            android:summary="@string/display_language_summary"
            android:entries="@array/SupportedLanguages"
            android:entryValues="@array/SupportedLanguagesValues"
            android:defaultValue="en"
            android:key="DISPLAY_LANGUAGE"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/pref_show_hidden_files"
            android:key="ENABLE_SHOW_HIDDEN_FILES"
            android:summary="@string/pref_show_hidden_files_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:title="@string/pref_show_debug_info"
            android:key="ENABLE_SHOW_DEBUG_INFO"
            android:summary="@string/pref_show_debug_info_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
