<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of the LibreOffice project.
 This Source Code Form is subject to the terms of the Mozilla Public
 License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="pref_key_owncloud_settings"
        android:title="@string/owncloud_settings"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:hint="https://server:port/"
            android:key="pref_server_url"
            android:summary="@string/server_url_and_port"
            android:title="@string/server_url"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:key="pref_user_name"
            android:title="@string/user_name"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:key="pref_password"
            android:password="true"
            android:title="@string/password"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/physical_storage_settings"
        app:iconSpaceReserved="false">
        <Preference
            android:key="pref_extsd_path_uri"
            android:title="@string/external_sd_path"
            app:iconSpaceReserved="false" />
        <!-- FIXME fix or remove Preference
            android:key="pref_otg_path_uri"
            android:summary="@string/otg_warning"
            android:title="@string/otg_device_path"
            app:iconSpaceReserved="false" /-->
    </PreferenceCategory>

</PreferenceScreen>
