<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/LibreOfficeTheme.Base">

    <RadioGroup
        android:id="@+id/radioGrp_theme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="26sp"
        android:paddingTop="16sp">

        <RadioButton
            android:id="@+id/radioBtn_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:paddingLeft="15sp"
            android:fontFamily="sans-serif"
            android:text="@string/theme_dark"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioBtn_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:paddingLeft="15sp"
            android:fontFamily="sans-serif"
            android:text="@string/theme_light"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioBtn_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="15sp"
            android:fontFamily="sans-serif"
            android:text="@string/theme_system_default"
            android:textSize="18sp" />
    </RadioGroup>
</LinearLayout>