<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="20dip">

    <TextView
        android:id="@+id/about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/about_vendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_vendor"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version_and_hash"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="14sp" />

</LinearLayout>
</ScrollView>
