<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of the LibreOffice project.

 This Source Code Form is subject to the terms of the Mozilla Public
 License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at http://mozilla.org/MPL/2.0/.
 -->

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <!-- The content -->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/overview_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toolbar_background"
                android:elevation="3dp"
                app:theme="@style/LibreOfficeTheme.Toolbar"
                app:popupTheme="@style/LibreOfficeTheme"
                app:layout_scrollFlags="enterAlways|scroll" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/header_recents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/title_recents"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/recent_list_or_grid"
                        android:layout_width="96dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/ic_list_black_24dp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_recent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp" >

                    </androidx.recyclerview.widget.RecyclerView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3" />

                        <TextView
                            android:id="@+id/no_recent_items_msg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/no_recent_items"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3" />
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <!-- Floating Action Buttons -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:visibility="invisible"
                app:backgroundTint="@color/background_normal"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_add_black_24dp"
                app:useCompatPadding="true" />

            <LinearLayout
                android:id="@+id/writerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/editFAB"
                app:layout_constraintRight_toRightOf="@id/editFAB"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/newWriterTextView"
                    style="@style/NewDocumentTextView"
                    android:layout_marginTop="@dimen/new_doc_fab_tweak_top"
                    android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom"
                    android:text="@string/new_textdocument" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/newWriterFAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/new_doc_fab_tweak_top"
                    android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/background_normal"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/writer"
                    app:useCompatPadding="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/impressLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/writerLayout"
                app:layout_constraintRight_toRightOf="@id/editFAB"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/newImpressTextView"
                    style="@style/NewDocumentTextView"
                    android:layout_marginTop="@dimen/new_doc_fab_tweak_top"
                    android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom"
                    android:text="@string/new_presentation" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/newImpressFAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/new_doc_fab_tweak_top"
                    android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/background_normal"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/impress"
                    app:useCompatPadding="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/calcLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/impressLayout"
                app:layout_constraintRight_toRightOf="@id/editFAB"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/newCalcTextView"
                    style="@style/NewDocumentTextView"
                    android:layout_marginTop="@dimen/new_doc_fab_tweak_top"
                    android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom"
                    android:text="@string/new_spreadsheet" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/newCalcFAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/new_doc_fab_tweak_top"
                    android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/background_normal"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/calc"
                    app:useCompatPadding="true" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- The navigation drawer -->

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_normal"
        android:theme="@style/LibreOfficeTheme.NavigationView"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
